# neural-dvr

./: Makefile  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/scripts/: run-backend.sh
backend/src/: api.rs  config.rs  main.rs  models.rs  streaming.rs
backend/src/hikvision/: client.rs  discovery.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CameraGrid.tsx  DeviceList.tsx  VideoPlayer.tsx
frontend/src/lib/: api.ts
