[package]
name = "neural-dvr"
version = "0.1.0"
edition = "2021"
description = "Hikvision DVR realtime streaming backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
